--- a/layout.css
+++ b/layout.css
@@ -2,7 +2,12 @@
     margin: 0;
     padding: 0;
 }
-
+header {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+}
 .header-box {
     height: 100px;
     background-color: rgb(59, 59, 59);
@@ -12,7 +17,7 @@
 }
 
 section {
-    height: 780px;
+    height: 100%;
 }
 
 footer {
@@ -20,6 +25,10 @@ footer {
     background-color: rgb(59, 59, 59);
     display: flex;
     justify-content: center;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
 
 .footer-wrap {
