--- a/login/login.css
+++ b/login/login.css
@@ -31,6 +31,7 @@
     border-radius: 14px;
     color:white;
     gap:10px;
+    cursor: pointer;
 }
 
 .user-mode {
@@ -44,4 +45,5 @@
     border-radius: 14px;
     color:white;
     gap:10px;
+    cursor: pointer;
 }
