layout의 header, footer margin 추가 / 컨텐츠의 경우 section 내부로 삽입

--- a/layout/layout.html
+++ b/layout/layout.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="layout.css" rel="stylesheet" />
+    <link href="/admin_project_register/admin_project_register.css" rel="stylesheet" />
     <title>Document</title>
 </head>
 <body>
     <header>
         <div class="header-box">
-            <img class="head-logo" src="/logo.png" alt="상단로고">
+            <img class="head-logo" src="logo.png" alt="상단로고">
         </div>
     </header>
     <section>
@@ -18,7 +19,7 @@
     <footer>
         <div class="footer-wrap">
             <div class="foot-logo-box">
-                <img class="foot-logo" src="/logo.png" alt="하단로고">
+                <img class="foot-logo" src="logo.png" alt="하단로고">
             </div>
             <div class="info-box">
                 <div class="company-info">
