--- a/layout/layout.css
+++ b/layout/layout.css
@@ -3,10 +3,7 @@
     padding: 0;
 }
 header {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
+    margin-bottom: 30px;
 }
 .header-box {
     height: 100px;
@@ -18,6 +15,7 @@ header {
 
 section {
     height: 100%;
+
 }
 
 footer {
@@ -25,10 +23,7 @@ footer {
     background-color: rgb(59, 59, 59);
     display: flex;
     justify-content: center;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    margin-top: 100px;
 }
 
 .footer-wrap {
