--- a/admin_project_list/admin_project_list.css
+++ b/admin_project_list/admin_project_list.css
@@ -3,7 +3,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 100px;
 }
 .project-list-title {
     display: flex;
@@ -13,6 +12,7 @@
     height: 80px;
     justify-content: center;
     align-items: center;
+    margin-bottom: 80px;
 }
 .pj-title-en {
     color: gray;
@@ -27,6 +27,7 @@
     width: 950px;
     border: 1px solid black;
     border-collapse: collapse;
+    margin-bottom: 20px;
 }
 
 th, td, tr {
@@ -49,4 +50,30 @@ td {
 .project-name-td {
     text-align: start;
     padding-left: 10px;
+}
+
+.table-options {
+    height: 40px;
+    width: 700px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.search-category,
+.search-input {
+    height: 35px;
+    border-radius: 4px;
+    border: 1px solid gray
+}
+
+.to-calender-btn,
+.search-btn {
+    height: 35px;
+    width: 100px;
+    background-color: #053B75;
+    color: white;
+    border-radius: 10px;
+    font-size: 16px;
+    font-weight: 900;
+    cursor: pointer;
 }
