--- a/user_work/user_work_register.css
+++ b/user_work/user_work_register.css
@@ -69,3 +69,19 @@
     border-radius: 14px;
     cursor: pointer;
 }
+
+.update-delete-btns{
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+}
+.update-project-btn,
+.delete-project-btn {
+    width: 304px;
+    height: 60px;
+    background-color: #053B75;
+    color: white;
+    font-size: 16px;
+    border-radius: 14px;
+    cursor: pointer;
+}
